examples/manual/failing/ArgLengthMismatch.purs
module ArgLengthMismatch where

import Prelude

f x y = true
f = false
